--- a/TecnicasDeDisenio/pom.xml
+++ b/TecnicasDeDisenio/pom.xml
@@ -31,7 +31,9 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
+					<encoding>ISO-8859-1</encoding>
 				</configuration>
+				
 			</plugin>
 			<plugin>
 				<groupId>org.objectstyle.woproject.maven2</groupId>
