--- a/trunk/TecnicasDeDisenio/pom.xml
+++ b/trunk/TecnicasDeDisenio/pom.xml
@@ -178,5 +178,15 @@
 		</repository>
 
 	</repositories>
+	
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.4</version>
+			</plugin>
+		</plugins>
+	</reporting>
 
 </project>
