Agrego el plug-in de cobertura, para generar el reporte hay que ejecutar mvn cobertura:cobertura y queda en target/site/cobertura.

--- a/TecnicasDeDisenio/pom.xml
+++ b/TecnicasDeDisenio/pom.xml
@@ -178,5 +178,15 @@
 		</repository>
 
 	</repositories>
+	
+	<reporting>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.4</version>
+			</plugin>
+		</plugins>
+	</reporting>
 
 </project>
