--- a/trunk/TecnicasDeDisenio/pom.xml
+++ b/trunk/TecnicasDeDisenio/pom.xml
@@ -31,7 +31,7 @@
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
-					<encoding>ISO-8859-1</encoding>
+					<encoding>UTF-8</encoding>
 				</configuration>
 				
 			</plugin>
@@ -53,6 +53,15 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+
+            <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
 			</plugin>
 
 
